[metadata]
name = IIR2Filter
version = 1.0
author = Gergely Pogány
author_email = 
description = Python2 Realtime IIR filter
long_description = file:README.md
url = https://github.com/poganyg/IIR-filter
license = MIT
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    
[options]
zip_safe = False
packages = find: